--- a/3505_Final_Project/mainwindow.ui
+++ b/3505_Final_Project/mainwindow.ui
@@ -27,6 +27,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="PlayerLabel">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>70</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
