--- a/3505_Final_Project/mainwindow.ui
+++ b/3505_Final_Project/mainwindow.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Reading Rainbow</string>
+   <string>Goblin Gurus</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QMainWindow { background: rgb(0, 0, 0)}</string>
